# SOCEnv

./: .gitignore  Dockerfile  README.md  TEAM_README.md  app.py  check.py  demo_task2.py  demo_task3.py  environment.py  graders.py  inference.py  metrics.py  models.py  openenv.yaml  push_log.txt  pyproject.toml  requirements.txt  tasks.py  test_validator.py
server/: app.py
